third_party/move/move-compiler-v2/tests/checking/typing/pack_invalid_argument.exp

Diagnostics:
error: expected `u64` but found a value of type `bool`
  ┌─ tests/checking/typing/pack_invalid_argument.move:7:17
  │
7 │         (S { f: false } : S);
  │                 ^^^^^

error: expected `S` but found a value of type `R`
   ┌─ tests/checking/typing/pack_invalid_argument.move:17:16
   │
17 │             s: r,
   │                ^

error: expected `u64` but found a value of type `bool`
   ┌─ tests/checking/typing/pack_invalid_argument.move:18:16
   │
18 │             f: false,
   │                ^^^^^

error: expected `Nat<u64>` but found a value of type `Nat<bool>`
   ┌─ tests/checking/typing/pack_invalid_argument.move:19:17
   │
19 │             n1: Nat { f: false },
   │                 ^^^^^^^^^^^^^^^^

error: expected `Nat<S>` but found a value of type `Nat<R>`
   ┌─ tests/checking/typing/pack_invalid_argument.move:20:17
   │
20 │             n2: Nat{ f: r }
   │                 ^^^^^^^^^^^
